source/styles/blocks/filter.scss
.filter {
  display: grid;
  gap: 24px;
}

.filter__group {
  margin: 0;
  padding: 0;
  border: 0;
}

.filter__title {
  margin-bottom: 20px;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.filter__control {
  margin-bottom: 20px;
}

.filter__control:last-child {
  margin-bottom: 0;
}

.filter__buttons {
  display: grid;
  gap: 20px;
}

.filter__button {
  width: 100%;
}

@media (min-width: $tablet-width) {
  .filter {
    grid-template-columns: 223px 222px 223px;
    gap: 40px 30px;
  }

  .filter__buttons {
    grid-column: 1 / -1;
    grid-template-columns: 137px 120px;
    justify-content: center;
    gap: 20px;
  }
}

@media (min-width: $desktop-width) {
  .filter {
    grid-template-columns: 1fr;
    gap: 30px;
  }

  .filter__buttons {
    grid-column: auto;
    grid-template-columns: 149px 149px;
    justify-content: start;
    gap: 20px;
  }
}

